# apache-airflow-providers-isolation

./: .astro-registry.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLI.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: check.yml  create-release.yaml  pre-commit.yaml  publish.yaml  test-publish.yaml
.run/: Run All Tests (No Slow Test).run.xml  Run All Tests.run.xml  Run Quick Tests (No Slow Tests).run.xml  Run Tests (No Slow Tests).run.xml
isolation/: __init__.py  util.py
isolation/example_dags/: README.md  example_dag.py  isolation_provider_example_dag.py
isolation/hooks/: post_isolation.py  pre_isolation.py
isolation/operators/: __init__.py  isolation.py  isolation_kubernetes.py
isolationctl/: __init__.py  __main__.py
tests/: conftest.py  e2e_test.py
tests/isolation/: isolated_operator_integration_test.py
tests/isolation/hooks/: post_isolation_hook_test.py  post_isolation_integration_test.py  util_test.py
tests/isolation/operators/: isolation_kubernetes_test.py  isolation_test.py
tests/isolationctl/: __init__test.py  __main__test.py
tests/resources/: README.md
tests/resources/fn/: direct.py  inner.py  outer.py
tests/resources/other_fn/: other_fn.py
